Closed
Bug 431636
Opened 13 years ago
Closed 13 years ago
"seamonkey -h" should mention -migration switch
Categories
(SeaMonkey :: Help Documentation, defect)
SeaMonkey
Help Documentation
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: tonymec, Assigned: iann_bugzilla)
References
Details
Attachments
(1 file, 1 obsolete file)
1.46 KB,
patch
|
benjamin
:
review+
neil
:
superreview+
|
Details | Diff | Splinter Review |
Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9pre) Gecko/2008043002 SeaMonkey/2.0a1pre Reproducible: Always Steps to Reproduce: 1. (at shell prompt) seamonkey -h Actual Results: -migration switch is not mentioned Expected Results -migration switch (to import profile data from other Netscape/Mozilla apps incl. Sm 1.x) should be mentioned. Additional info: See also bug 383006
Flags: blocking-seamonkey2.0a1?
This patch: * Adds -P <profile> -migration to app options * Changes "Mozilla options" to app options * Removes \t which causes one line not to line up
Assignee: neil → iann_bugzilla
Status: NEW → ASSIGNED
Attachment #334582 -
Flags: superreview?(neil)
Attachment #334582 -
Flags: review?
Attachment #334582 -
Flags: review? → review?(benjamin)
Comment 3•13 years ago
|
||
Comment on attachment 334582 [details] [diff] [review] Tweak -h information >- "\t-UILocale <locale>\t\tStart with <locale> resources as UI Locale.\n" >+ "\t-UILocale <locale>\tStart with <locale> resources as UI Locale.\n" Maybe these should just use spaces. By comparison -jsconsole Open the Error console. -reftest <file> Run layout acceptance tests on given manifest. Hmm, well I guess we aren't as consistent as we should be ;-)
Attachment #334582 -
Flags: superreview?(neil) → superreview+
Comment 4•13 years ago
|
||
Comment on attachment 334582 [details] [diff] [review] Tweak -h information the -migration flag does not have to be used in conjunction with -P. It should be documented separately.
Attachment #334582 -
Flags: review?(benjamin) → review-
Changes since v0.1: * Now documents -migration separate to -P <profile> Alternative is to say: "Start with migration wizard, migrates into default profile if none is specified." but that might be a bit too long.
Attachment #334582 -
Attachment is obsolete: true
Attachment #335409 -
Flags: superreview?(neil)
Attachment #335409 -
Flags: review?
Attachment #335409 -
Flags: review? → review?(benjamin)
Updated•13 years ago
|
Attachment #335409 -
Flags: superreview?(neil) → superreview+
Not something we need to get fixed for SM2.0a1 but will take a fix if there is one.
![]() |
||
Comment 7•13 years ago
|
||
Comment on attachment 335409 [details] [diff] [review] Revised tweak to -h information v0.1a (Checkin: Comment 8) >diff --git a/toolkit/xre/nsAppRunner.cpp b/toolkit/xre/nsAppRunner.cpp > #ifdef XP_UNIX > printf("\t--g-fatal-warnings\t\tMake all warnings fatal\n" >- "\nMozilla options\n"); >+ "\n%s options\n", gAppData->name); Sorry for nitpicking, but wouldn't it be better to make the second line |#ifdef MOZ_X11| just line the other such subsection heading is?
Updated•13 years ago
|
Attachment #335409 -
Flags: review?(benjamin) → review+
Comment on attachment 335409 [details] [diff] [review] Revised tweak to -h information v0.1a (Checkin: Comment 8) http://hg.mozilla.org/mozilla-central/rev/0e80ec86dc1d
Attachment #335409 -
Attachment description: Revised tweak to -h information v0.1a → Revised tweak to -h information v0.1a (Checkin: Comment 8)
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•