Bug 431636 - "seamonkey -h" should mention -migration switch p=me r=benjamin sr=neil